tests/compile_fail/compact_missing_id.dd
from serdde.macros import Serde


@derive(Serde)
@Serde(compact=True)
class MissingId:
    value: i32


def main() -> i32:
    return 0
